# nowpayments

./: .env.template  .gitignore  Cargo.toml  README.md  flake.nix
src/: client.rs  jwt.rs  lib.rs
src/better/: currencies.rs  mod.rs  payments.rs
src/better/mock/: payments.rs
src/client/: auth.rs  currencies.rs  http.rs  mock_payment.rs  mod.rs  payment.rs  payout.rs
src/response/: conversion.rs  currencies.rs  mod.rs  payments.rs  payouts.rs  status.rs
src/response/currencies/: mod.rs
src/response/payments/: methods.rs  mod.rs  status.rs
tests/: create_payment.rs  currency_test.result  full_currency_test.result
