[package]
description = "Nowpayments rust api"
edition = "2021"
license = "MIT"
name = "nowpayments"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71" }
bon = "3.8.2"
chrono = { version = "0.4.42", features = ["now", "serde"] }
convert_case = "0.10.0"
dotenvy = "0.15.7"
reqwest = { version = "0.11.18", features = ["json"] }
rust_decimal = "1.39.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.148", features = ["preserve_order"] }
strum = { version = "0.27.2", features = ["derive"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-test = "0.2.5"
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
dotenvy = { version = "0.15.7", features = [] }
envy = "0.4.2"
serde = "1.0.164"
tokio = { version = "1.28.2", features = ["macros", "test-util"] }
